bk_ida/gccida/c1/output_constant
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant/src/varasm.c:4989:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant/src/varasm.c:4990:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant/src/varasm.c:4997:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v6 = lang_hooks_0.expand_constant( exp); 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant/src/varasm.c:4997:34: error: called object type '<dependent type>' is not a function or function pointer
v6 = lang_hooks_0.expand_constant( exp); 
                                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant/src/obj/varasm.o] Error 1
